--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,6 +23,10 @@ textarea {
     margin-bottom: 10px;
 }
 
+img {
+    display: none;
+}
+
 /* typography */
 
 h1,
@@ -53,4 +57,22 @@ h2 {
 p {
     font-size: 1.1em;
     line-height: 1.7em;
+}
+
+/* header */
+
+#logo {
+    float: left;
+    margin-right: 10px;
+    font-size: 1.7em;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    padding-top: 9px;
+    font-weight: bold;
+}
+
+#logo:hover {
+    color: #fff;
+    text-decoration: none;
 }
