--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,8 @@
   <title>
     <%= full_title(yield(:title)) %>
   </title>
-  <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  <%= <%= render  'layouts/shim' %>
-
+  <%= render 'layouts/rails_default' %>
+  <%= render 'layouts/shim' %>
 </head>
 
 <body>
@@ -17,6 +14,7 @@
   <div class="container">
     <%= yield %>
   </div>
+  <%= render 'layouts/footer' %>
 </body>
 
 </html>
